[package]
name = "bech32"
version = "0.7.2"
authors = ["Clark Moody"]
edition = "2018"
repository = "https://github.com/rust-bitcoin/rust-bech32"
description = "Encodes and decodes the Bech32 format"
readme = "README.md"
keywords = ["base32", "encoding", "bech32"]
categories = ["encoding"]
license = "MIT"

[features]
default = [ "mesalock_sgx" ]
# Only for CI to make all warnings errors, do not activate otherwise (may break forward compatibility)
strict = []
mesalock_sgx = [ "sgx_tstd" ]

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
